[metadata]
name = expipe
version = attr: expipe.__version__
license = file: LICENSE
author = estshorter
description = tiny pipeline for numerical experiments
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.extras_require]
develop =
    pytest
    numpy
    pandas
