[metadata]
name = lwpipe
version = attr: lwpipe.__version__
license_file = LICENSE
author = estshorter
url = https://github.com/estshorter/lwpipe
description = lightweight pipeline for numerical experiments
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.extras_require]
develop =
    pytest
    numpy
    pandas

[options]
packages=find:
